--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ PORT=7777
 # 系统全局的ID生产方式
 ID_GLOBAL_TYPE=AUTO
 # 消息的ID生产方式
-ID_MESSAGE_TYPE=
+ID_MESSAGE_TYPE=TIMESTAMP
 # channel的ID生产方式
-ID_CHANNEL_TYPE=
+ID_CHANNEL_TYPE=UUID
